----------------------------------------------------------------------
 OmegaT 3.4 update 1
----------------------------------------------------------------------
  10 Enhancements
   2 Bug fixes
   4 Localisation updates
----------------------------------------------------------------------
3.4 update 1 vs 3.4

  Implemented requests:

  - Progress bar L10N improvement 
  https://sourceforge.net/p/omegat/feature-requests/1055/

  - Glossary input from Search window 
  https://sourceforge.net/p/omegat/feature-requests/747/

  - Highlighting search word in target segment 
  https://sourceforge.net/p/omegat/feature-requests/890/

  - Drag and drop to open project 
  https://sourceforge.net/p/omegat/feature-requests/113/

  - Drag and drop to add files to project
  https://sourceforge.net/p/omegat/feature-requests/1091/

  - Add confirmation for the button Reset all colours
  https://sourceforge.net/p/omegat/feature-requests/1085/

  Other changes:

  - There's an explanation message at the bottom of the Editor when
Ctrl+Shift+O is pressed

  - New script to clear SVN authentication data

  - Better OS X integration: Full-screen support, drag-and-drop
to program icon, main window proxy icon and modification marker

  - New OmegaT icon on the Mac

  - Go to next/previous segment with key shortcuts work 
in the Search result window just like in the Editor

  - Alternatively to specifiy a project folder on the command line,
it is now also possible to specify the path of an omegat.project file

  - In the QA - Check rules script (check_rules.groovy), it is now
possible to check linguistic (LangageTool) issues

  Bug fixes:

  - Panel header title was white under Windows 7 with a classic theme

  - Script files could be locked 
  https://sourceforge.net/p/omegat/bugs/749/

  Localisation updates:

  - Dutch localisation updated to 3.4 update 1 (UI, documentation, readme)
  - Russian localisation updated to 3.4 update 1 (UI, readme, scripts)