@@ -82,6 +82,8 @@ toolsValidateTagsMenuItem=meta shift V
 #	optionsTabAdvanceCheckBoxMenuItem=
 #	optionsAlwaysConfirmQuitCheckBoxMenuItem=
 #	optionsGlossaryTBXDisplayContextCheckBoxMenuItem=
+#       optionsGlossaryExactMatchCheckBoxMenuItem
+#       optionsGlossaryStemmingCheckBoxMenuItem
 #	optionsTransTipsEnableMenuItem=
 #	optionsTransTipsExactMatchMenuItem=
 #	optionsAutoCompleteGlossaryMenuItem=
