@@ -82,6 +82,8 @@ toolsValidateTagsMenuItem=ctrl shift V
 #	optionsTabAdvanceCheckBoxMenuItem=
 #	optionsAlwaysConfirmQuitCheckBoxMenuItem=
 #	optionsGlossaryTBXDisplayContextCheckBoxMenuItem=
+#       optionsGlossaryExactMatchCheckBoxMenuItem
+#       optionsGlossaryStemmingCheckBoxMenuItem
 #	optionsTransTipsEnableMenuItem=
 #	optionsTransTipsExactMatchMenuItem=
 #	optionsAutoCompleteGlossaryMenuItem=
