@@ -12,7 +12,7 @@
                2012 Wildrich Fourie, Guido Leenders, Didier Briel
                2013 Zoltan Bartko, Didier Briel, Yu Tang
                2014 Aaron Madlon-Kay
-               2015 Yu Tang, Aaron Madlon-Kay
+               2015 Yu Tang, Aaron Madlon-Kay, Didier Briel
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -682,6 +682,23 @@ public class MainWindowMenuHandler {
 
         Core.getGlossaryManager().forceReloadTBX();
     }
+    
+    public void optionsGlossaryExactMatchCheckBoxMenuItemActionPerformed() {
+        Preferences.setPreference(Preferences.GLOSSARY_NOT_EXACT_MATCH,
+                mainWindow.menu.optionsGlossaryExactMatchCheckBoxMenuItem.isSelected());
+        Preferences.save();
+        Core.getGlossaryManager().forceUpdateGlossary();
+
+    }
+    
+    public void optionsGlossaryStemmingCheckBoxMenuItemActionPerformed() {
+        Preferences.setPreference(Preferences.GLOSSARY_STEMMING,
+                mainWindow.menu.optionsGlossaryStemmingCheckBoxMenuItem.isSelected());
+        Preferences.save();
+        Core.getGlossaryManager().forceUpdateGlossary();
+
+    }
+
 
     /**
      * Displays the font dialog to allow selecting the font for source, target text (in main window) and for
